[metadata]
name = pkr
version = 0.0.1
author = Yusuf Burak
author_email = your.email@example.com
license = MIT
description = Pure Kernel Regression: noise-free, explainable tabular regression via high-purity feature windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YusufBurak/PKR
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    pandas>=1.4
    joblib>=1.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pkr = pkr.cli:main
